# CmakeLearningParkT

./: CMakeLists.txt  README.md
CmakeBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CmakeLearing.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mainExe.vcxproj  mainExe.vcxproj.filters
CmakeBuild/.cmake/api/v1/reply/: cache-v2-ee9f2820580bccd56619.json  cmakeFiles-v1-ce7fac6950c057a5fd98.json  codemodel-v2-9c4cfb778a7a6dded266.json  index-2022-10-17T14-21-46-0925.json  target-ALL_BUILD-RelWithDebInfo-fdad5dce5a5dfbae16c1.json  target-ZERO_CHECK-RelWithDebInfo-8dd63c3219786c0bcf25.json  target-mainExe-Debug-f002c90bf0d4b8e7700c.json  target-mainExe-MinSizeRel-fb4a58e1a90e14c1105c.json  target-mainExe-RelWithDebInfo-2fd30e6ee0e0e1492b62.json  target-mainExe-Release-c10d316d363dc1e8ed90.json  toolchains-v1-f12dc4cd62cfa1f60f2d.json
CmakeBuild/gccMakefile/: CMakeCache.txt  Makefile  cmake_install.cmake
source/: CMakeLists.txt  main.cpp  makefileGen.ps1  printName.cpp  printName.hpp  system-information.txt  visualGen.ps1
source/header/: main.hpp
